test(preview): fix deterministic package-gap fixture